# genstudio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPING.md  MANIFEST.in  README.md  esbuild.config.mjs  mkdocs.yml  package.json  plot.py  pyproject.toml  pyrightconfig.json  tailwind.config.js  tsconfig.json  util.py  vitest.config.js  vitest.config.mjs  webgl-utils.ts  widget.js
.github/workflows/: docs.yml  publish_website.yml  pyright.yml  release.yml  tests.yml
docs/: CHANGELOG.md  PROMPT.py  TODO.md  additions-to-observable.py  animate-interactive.py  comparison-with-observable.py  example-timelines.py  getting-started.py  html-hiccup.py  image-examples.py  index.md  index.py  layouts.py  llms.py  python-event-loop.py  quickstart.py  synchronized-highlights.py  tachyons-classes.md  user-guide.py
docs/api/: plot.md  scene3d.md
docs/examples/: barx-timeline.py  draw-density.py  ellipse-mark.py  event-loop.py  histogram-mark.py  image-mark.py  interactive-density.py  isotype.py  katex.py  live-edit-source.py  live_edit_source.py  pixels.py  timelines.py
docs/fonts/Crimson_Pro/: OFL.txt
docs/interactivity/: events.py  frames.py  refs.py  reset.py  sliders.py  tail.py
docs/learn-more/: color.py  cond.py  hiccup.py  how-do-i.py  layouts.py  plot-options.py  python-event-loop.py  save-as-image.py  vs-observable.py
docs/overrides/: docs.js  uplight.js
docs/overrides/assets/stylesheets/: main.0253249f.min.css
docs/overrides/js/: bylight.js  uplight.js
docs/overrides/stylesheets/: custom.css
docs/system-guide/: js-imports.py  layouts.py  state.py
docs/user-guide/: additions-to-observable.py  animate-interactive.py  basics.py  html-hiccup.py  python-event-loop.py
notebooks/: adev_demo.py  animation_examples.py  anywidget_jax_callback.js  anywidget_jax_callback.py  anywidget_reactivity.js  anywidget_reactivity.py  anywidget_response_time.py  anywidget_rpc.py  arrays.py  arrays_widgets_html.py  binary.py  bylight_example.py  cache_examples.py  callback_examples.py  click.py  color_legend.py  color_scheme_examples.py  controlled_view.py  dispose_examples.py  draggable_example.py  ellipse.py  ellipse_examples.py  foo.py  grid.py  hiccup.py  hiccup_examples.py  hiccup_svg.py  html.py  html_examples.py  images.py  import.py  infinity_examples.py  input_examples.py  interactive_intro.py  katex.py  lines.py  listener_chain.py  notes.md  onChange_chained.py  onChange_js.py  (+25 more)
notebooks/intro/: compile.sh  intro_slides.py
notebooks/intro_slides/: intro_slides.py
scripts/: observable_plot_metadata.js  release.py  update_asset_versions.py
src/genstudio/: js_modules.py  layout.py  plot.py  plot3d.py  plot_defs.py  plot_spec.py  scene3d.py  tachyons.css  util.py  widget.css  widget.js  widget.py
src/genstudio/alpha/: scene3d.py
src/genstudio/docs/: plugin.py
src/genstudio/js/: api.js  api.jsx  binary.js  context.js  draw.js  ellipse.js  eval.js  import-map.cdn.json  imports.js  imports.npm.js  layout.jsx  plot.js  plot.jsx  plot3d.js  plot3d.jsx  render.js  utils.js  utils.ts  widget.js  widget.jsx
src/genstudio/scripts/: make_observable_plot_defs.py  observable_plot_metadata.js  observable_plot_metadata.json  package.json  tailwind_builder.py
tests/js/: binary.test.js  widget.test.jsx
tests/js/plot/: draw.test.jsx  ellipse.test.jsx  events.test.jsx  img.test.js
tests/python/: test_plot.py  test_util.py  test_widget.py
tests/studio/: test_plot.py  test_util.py
(+28 files in other folders)
